tests/type_param_variance2/libs/__snapshots__/jsfmt.spec.js.snap
exports[`test Promise.js 1`] = `
"// Copyright 2004-present Facebook. All Rights Reserved.

// These annotations are copy/pasted from the built-in Flow definitions for
// Native Promises (https://phabricator.fb.com/P19792689),
// with www-specific additions added in.

// Any definitions here will override similarly-named ones in
// library files declared earlier, including default flow libs.

declare class Promise<R> {
  constructor(callback: (
    resolve: (result?: Promise<R> | R) => void,
    reject: (error?: any) => void
  ) => void): void;

  then<U>(
    onFulfill?: ?(value: R) => Promise<U> | ?U,
    onReject?: ?(error: any) => Promise<U> | ?U
  ): Promise<U>;

  done<U>(
    onFulfill?: ?(value: R) => void,
    onReject?: ?(error: any) => void
  ): void;

  catch<U>(
    onReject?: (error: any) => ?Promise<U> | U
  ): Promise<U>;

  static resolve<T>(object?: Promise<T> | T): Promise<T>;
  static reject<T>(error?: any): Promise<T>;

  // Non-standard APIs
  finally<U>(
    onSettled?: ?(value: any) => Promise<U> | U
  ): Promise<U>;

  static cast<T>(object?: T): Promise<T>;
  static all<T>(
    promises: Array<?Promise<T> | T>,
  ): Promise<Array<T>>;
  static race<T>(promises: Array<Promise<T>>): Promise<T>;

  static allObject<T: Object>(
    promisesByKey: T
  ): Promise<{[key: $Keys<T>]: any}>;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Copyright 2004-present Facebook. All Rights Reserved.
// These annotations are copy/pasted from the built-in Flow definitions for
// Native Promises (https://phabricator.fb.com/P19792689),
// with www-specific additions added in.
// Any definitions here will override similarly-named ones in
// library files declared earlier, including default flow libs.
// Non-standard APIs
declare class Promise {
  constructor: : (callback: (resolve: (result?: Promise<R> | R) => void, reject: (error?: any) => void) => void) => void,
  then: : (onFulfill?: ?: (value: R) => Promise<U> | ?U, onReject?: ?: (error: any) => Promise<U> | ?U) => Promise<U>,
  done: : (onFulfill?: ?: (value: R) => void, onReject?: ?: (error: any) => void) => void,
  catch: : (onReject?: (error: any) => ?Promise<U> | U) => Promise<U>,
  resolve: : (object?: Promise<T> | T) => Promise<T>,
  reject: : (error?: any) => Promise<T>,
  finally: : (onSettled?: ?: (value: any) => Promise<U> | U) => Promise<U>,
  cast: : (object?: T) => Promise<T>,
  all: : (promises: Array<?Promise<T> | T>) => Promise<Array<T>>,
  race: : (promises: Array<Promise<T>>) => Promise<T>,
  allObject: : (promisesByKey: T) => Promise<{ [key: $Keys<T>]: any }>
}
"
`;
